Fixed New line break in message content

--- a/GUI/src/components/Chat/Chat.scss
+++ b/GUI/src/components/Chat/Chat.scss
@@ -160,10 +160,11 @@
           color: get-color(white);
 
           :any-link {
-              background: url("../../static/icons/link-external-blue.svg") no-repeat right center;
-              padding-right: 1.25em;
-              color: blue;
-              text-decoration: underline;
+            background: url('../../static/icons/link-external-blue.svg')
+              no-repeat right center;
+            padding-right: 1.25em;
+            color: blue;
+            text-decoration: underline;
           }
 
           &:hover {
@@ -183,12 +184,13 @@
         &__message-text {
           background-color: get-color(black-coral-10);
           color: get-color(white);
-          
+
           :any-link {
-              background: url("../../static/icons/link-external-white.svg") no-repeat right center;
-              padding-right: 1.25em;
-              color: white;
-              text-decoration: underline;
+            background: url('../../static/icons/link-external-white.svg')
+              no-repeat right center;
+            padding-right: 1.25em;
+            color: white;
+            text-decoration: underline;
           }
 
           &:hover {
@@ -281,13 +283,16 @@
     line-height: $veera-line-height-500;
     transition: all 0.25s ease-out;
     cursor: pointer;
+    word-break: break-word;
+    white-space: pre-wrap;
 
     &:hover {
       background-color: get-color(black-coral-1);
     }
 
     :any-link {
-      background: url("../../static/icons/link-external-blue.svg") no-repeat right center;
+      background: url('../../static/icons/link-external-blue.svg') no-repeat
+        right center;
       padding-right: 1.25em;
       color: blue;
       text-decoration: underline;
@@ -304,8 +309,8 @@
     transition: all 0.25s ease-out;
     cursor: pointer;
 
-    color: #4472C4;
-    background-color: #E7F3FF;
+    color: #4472c4;
+    background-color: #e7f3ff;
   }
 
   &__message-date {
@@ -331,7 +336,6 @@
       display: inline-block;
       width: 16px;
       height: 16px;
-
     }
   }
 }
